Link Converter Task 1-2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/linkconverter
+spring.datasource.username=postgres
+spring.datasource.password=faxri
