--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/linkconverter
 spring.datasource.username=postgres
 spring.datasource.password=faxri
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=9090
